--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.0.2",
+    "gh-pages": "^6.0.0",
     "nuxt-swiper": "^1.2.2",
     "swiper": "^10.3.1"
   }
